syntax = "proto3";
package example;

import "delphi.proto";

message ExampleMetrics {
    uint32                 Key          = 1;
    delphi.Counter         RxPkts       = 2;
    delphi.Counter         TxPkts       = 3;
    delphi.Gauge           RxPktRate    = 4;
    delphi.Gauge           TxPktRate    = 5;
    delphi.Counter         RxErrors     = 6;
    delphi.Counter         TxErrors     = 7;
}
